fixed contrast error by making fallback color of hero image black

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -145,6 +145,7 @@ nav {
 
 .hero {
     align-items: center;
+    background-color: black;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/hero.jpg");
     height: 50vh;
     display: flex;
